[package]
name = "histogram"
version = "0.1.0"
authors = ["mike zhang <zhangmingkai19892013@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zhangmingkai4315/histogram"
keywords = ["histogram", "linked-list","statistic","quantile","cumulative","distribution","variance"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-list = "0.0.3"
rand = "0.5"